2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: IUndoable renamed to IUndoActivity
	UnodableAdapter renamed to AbstractUndoActivity

2009-06-03  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: Changed references to FromEnumerator

2009-06-02  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.Util:
	* MonoHotDraw.csproj: Added MonoHotDraw.Util Folder

2009-05-28  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.Tools:
	* MonoHotDraw.csproj:
	* MonoHotDraw.Handles:
	* MonoHotDraw.Figures:
	* MonoHotDraw.Commands: 

2009-05-28  Manuel Cerón  <ceronman@gmail.com>
	* Moved a lot of files to new folders

2009-05-28  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.Tools:
	* MonoHotDraw.csproj:
	* MonoHotDraw.Figures:
	* MonoHotDraw.Handles:
	* MonoHotDraw.Commands: Added folders for organization

2009-05-28  Manuel Cerón  <ceronman@gmail.com>

	* MonoHotDraw.csproj: Project Updated

	* SteticComponent.cs: Added new component for using with
	stetic
