@@ -142,6 +142,7 @@
     <Compile Include="StandardDrawing.cs" />
     <Compile Include="StandardDrawingView.cs" />
     <Compile Include="SteticComponent.cs" />
+    <Compile Include="MonoHotDraw.Tools\UndoableTool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
